--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <div id="app">
     <h1 class="title">하루동행 챗봇</h1>
 
+    <!-- 홈 화면 -->
     <div id="home">
+      <button class="menu-btn" onclick="goDaily()">오늘 안심 정리</button>
       <button class="menu-btn" onclick="go('mood')">기분 기록하기</button>
       <button class="menu-btn" onclick="go('health')">건강 체크하기</button>
       <button class="menu-btn" onclick="go('caregiver')">보호자 메시지 보내기</button>
     </div>
 
+    <!-- 기존 채팅 화면 -->
     <div id="chat" style="display:none;">
       <button class="back-btn" onclick="backHome()">← 뒤로가기</button>
       <div id="chatLog" class="chat-log"></div>
@@ -25,8 +28,28 @@
         <button onclick="sendMessage()">전송</button>
       </div>
     </div>
+
+    <!-- ✅ 하루안심정리 화면 (NEW) -->
+    <div id="daily" style="display:none;">
+      <h2>
+        오늘 몸이나 마음 상태를<br>
+        편하게 말씀해 주세요
+      </h2>
+
+      <button onclick="startVoice()">🎤 말하기</button>
+
+      <div id="voiceText" style="margin-top:16px; color:#555;"></div>
+
+      <div id="dailyResult" style="margin-top:20px;"></div>
+
+      <button class="back-btn" onclick="backHome()">← 홈으로</button>
+    </div>
   </div>
 
+  <!-- ✅ 하루안심정리 전용 JS -->
+  <script src="dailyReassurance.js"></script>
+
+  <!-- 기존 로직 -->
   <script src="app.js"></script>
 </body>
 </html>
