--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         편하게 말씀해 주세요
       </h2>
 
-      <button onclick="startVoice()">🎤 말하기</button>
+     <button onclick="startVoice()">🎤 말하기 시작</button>
+<button onclick="stopVoice()">⏹ 말하기 끝</button>
+
 
       <div id="voiceText" style="margin-top:16px; color:#555;"></div>
 
