--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <button onclick="stopVoice()">⏹ 말하기 끝</button>
 
 
-      <div id="voiceText" style="margin-top:16px; color:#555;"></div>
+      <div id="dailyText" style="margin-top:16px; color:#555;"></div>
 
       <div id="dailyResult" style="margin-top:20px;"></div>
 
