--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div id="app">
+  <div class="title-wrap">
     <h1 class="title">하루동행 챗봇</h1>
+  </div>
 
     <!-- 홈 화면 -->
     <div id="home">
