--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         편하게 말씀해 주세요
       </h2>
 
-     <button onclick="startVoice()">🎤 말하기 시작</button>
-     <button onclick="stopVoice()">⏹ 말하기 끝</button>
+     <button class="voice-btn" onclick="startVoice()">🎤 말하기</button>
 
 
       <div id="dailyText" style="margin-top:16px; color:#555;"></div>
