--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
       <div id="dailyResult" style="margin-top:20px;"></div>
 
-      <button class="back-btn" onclick="backHome()">← 홈으로</button>
+      <button class="home-btn" onclick="backHome()">← 처음 화면으로</button>
+
     </div>
   </div>
 
