--- a/record.html
+++ b/record.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>하루동행 음성</title>
+  <title>하루동행 음성</title>const res = await fetch("/api/stt", {
+    method: "POST",
+    body: audioBlob,
+  });
+
+  const data = await res.json();
+  alert("인식된 문장:\n" + data.text);
   <style>
     body {
       margin: 0;
