--- a/record.html
+++ b/record.html
@@ -73,6 +73,8 @@
             body: audioBlob,
           });
 
+          alert("② 서버 응답 도착");     // ← record.html
+          
           const data = await res.json();
           alert("인식된 문장:\n" + data.text);
         };
