--- a/record.html
+++ b/record.html
@@ -58,8 +58,10 @@
     micBtn.onclick = async () => {
       if (!isRecording) {
         const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-        mediaRecorder = new MediaRecorder(stream);
-        audioChunks = [];
+     mediaRecorder = new MediaRecorder(stream, {
+  mimeType: "audio/webm;codecs=opus"
+});
+audioChunks = [];
 
         mediaRecorder.ondataavailable = e => {
           audioChunks.push(e.data);
