--- a/record.html
+++ b/record.html
@@ -59,7 +59,7 @@
       if (!isRecording) {
         const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
      mediaRecorder = new MediaRecorder(stream, {
-  mimeType: "audio/webm;codecs=opus"
+  mimeType: "audio/wav"
 });
 audioChunks = [];
 
