--- a/record.html
+++ b/record.html
@@ -78,10 +78,21 @@
     }
   };
 
-  recognition.onresult = (event) => {
-    const text = event.results[0][0].transcript;
-    alert("인식된 문장:\n" + text);
-  };
+ recognition.onresult = async (event) => {
+  const text = event.results[0][0].transcript;
+
+  const res = await fetch("/api/chat", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({ text }),
+  });
+
+  const data = await res.json();
+  alert(data.reply);
+};
+
 
   recognition.onerror = (event) => {
     alert("음성 인식 오류: " + event.error);
