--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         headers: {
           "Content-Type": "application/json",
         },
-        body: JSON.stringify({ text }),
+      body: JSON.stringify({ message: text }),
+ 
       });
 
       const data = await res.json();
