--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     });
 
     const data = await res.json();
-    alert(data.reply);
+    speak(data.reply);
   } catch (e) {
     alert("서버 오류가 발생했어요.");
   }
